--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -89,3 +89,9 @@ h1, p {
     text-align: left;
     margin: 0;
 }
+
+.info-desc {
+    max-width: 600px;
+    margin: auto;
+    padding: 0 15px;
+}
